compiler/lume_parser/src/snapshots/lume_parser__tests__struct_snapshots@property_no_default.snap
---
source: compiler/lume_parser/src/tests.rs
expression: "parse(\"\n        struct Foo {\n            x: Int32;\n        }\")"
---
[
    TypeDefinition(
        Struct(
            StructDefinition {
                name: Identifier {
                    name: "Foo",
                    location: Location(
                        16..19,
                    ),
                },
                builtin: false,
                properties: [
                    Property {
                        visibility: Private(
                            Private {
                                location: Location(
                                    34..35,
                                ),
                            },
                        ),
                        name: Identifier {
                            name: "x",
                            location: Location(
                                34..35,
                            ),
                        },
                        property_type: Named(
                            NamedType {
                                name: Path {
                                    root: [],
                                    name: Type {
                                        name: Identifier {
                                            name: "Int32",
                                            location: Location(
                                                37..42,
                                            ),
                                        },
                                        type_arguments: [],
                                        location: Location(
                                            37..43,
                                        ),
                                    },
                                    location: Location(
                                        37..43,
                                    ),
                                },
                            },
                        ),
                        default_value: None,
                        location: Location(
                            34..43,
                        ),
                        documentation: None,
                    },
                ],
                type_parameters: [],
                location: Location(
                    9..53,
                ),
                documentation: None,
            },
        ),
    ),
]
