compiler/lume_parser/src/snapshots/lume_parser__tests__struct_snapshots@pub_method.snap
---
source: compiler/lume_parse/src/tests.rs
expression: "parse(Target :: Item,\n\"\n        impl Foo {\n            pub fn bar() -> Int32 {\n                return 0;\n            }\n        }\")"
---
SOURCE_FILE@0..105
  WHITESPACE@0..9 "\n        "
  IMPL@9..105
    IMPL_KW@9..13 "impl"
    WHITESPACE@13..14 " "
    NAMED_TYPE@14..18
      PATH@14..18
        PATH_TYPE@14..18
          NAME@14..17
            IDENT@14..17 "Foo"
          WHITESPACE@17..18 " "
    LEFT_BRACE@18..19 "{"
    WHITESPACE@19..32 "\n            "
    METHOD@32..95
      VISIBILITY@32..36
        PUB_KW@32..35 "pub"
        WHITESPACE@35..36 " "
      SIG@36..54
        FN_KW@36..38 "fn"
        WHITESPACE@38..39 " "
        NAME@39..42
          IDENT@39..42 "bar"
        PARAM_LIST@42..44
          LEFT_PAREN@42..43 "("
          RIGHT_PAREN@43..44 ")"
        WHITESPACE@44..45 " "
        RETURN_TYPE@45..54
          ARROW@45..47 "->"
          WHITESPACE@47..48 " "
          NAMED_TYPE@48..54
            PATH@48..54
              PATH_TYPE@48..54
                NAME@48..53
                  IDENT@48..53 "Int32"
                WHITESPACE@53..54 " "
      BLOCK@54..95
        LEFT_BRACE@54..55 "{"
        WHITESPACE@55..72 "\n                "
        RETURN_STMT@72..81
          RETURN_KW@72..78 "return"
          WHITESPACE@78..79 " "
          LIT_EXPR@79..80
            INTEGER_LIT@79..80
              INTEGER_LIT@79..80 "0"
          SEMICOLON@80..81 ";"
        WHITESPACE@81..94 "\n            "
        RIGHT_BRACE@94..95 "}"
    WHITESPACE@95..104 "\n        "
    RIGHT_BRACE@104..105 "}"
