compiler/lume_parser/src/snapshots/lume_parser__tests__trait_snapshots@constrained_generics.snap
---
source: compiler/lume_parse/src/tests.rs
expression: "parse(Target :: Item, \"trait Add<T1: Numeric, T2: Numeric> {}\")"
---
SOURCE_FILE@0..38
  TRAIT@0..38
    TRAIT_KW@0..5 "trait"
    WHITESPACE@5..6 " "
    NAME@6..9
      IDENT@6..9 "Add"
    BOUND_TYPES@9..35
      LESS@9..10 "<"
      BOUND_TYPE@10..21
        NAME@10..12
          IDENT@10..12 "T1"
        CONSTRAINTS@12..21
          COLON@12..13 ":"
          WHITESPACE@13..14 " "
          NAMED_TYPE@14..21
            PATH@14..21
              PATH_TYPE@14..21
                NAME@14..21
                  IDENT@14..21 "Numeric"
      COMMA@21..22 ","
      WHITESPACE@22..23 " "
      BOUND_TYPE@23..34
        NAME@23..25
          IDENT@23..25 "T2"
        CONSTRAINTS@25..34
          COLON@25..26 ":"
          WHITESPACE@26..27 " "
          NAMED_TYPE@27..34
            PATH@27..34
              PATH_TYPE@27..34
                NAME@27..34
                  IDENT@27..34 "Numeric"
      GREATER@34..35 ">"
    WHITESPACE@35..36 " "
    LEFT_BRACE@36..37 "{"
    RIGHT_BRACE@37..38 "}"
