compiler/lume_parser/src/snapshots/lume_parser__tests__trait_snapshots@method.snap
---
source: compiler/lume_parser/src/tests.rs
expression: "parse(\"trait Add { fn add(other: Int32) -> Int32; }\")"
---
[
    TraitDefinition(
        TraitDefinition {
            attributes: [],
            visibility: None,
            name: Identifier {
                name: "Add",
                location: Location(
                    6..9,
                ),
            },
            type_parameters: [],
            methods: [
                TraitMethodDefinition {
                    attributes: [],
                    signature: Signature {
                        external: false,
                        name: Identifier {
                            name: "add",
                            location: Location(
                                15..18,
                            ),
                        },
                        type_parameters: [],
                        parameters: [
                            Parameter {
                                name: Identifier {
                                    name: "other",
                                    location: Location(
                                        19..24,
                                    ),
                                },
                                param_type: Named(
                                    NamedType {
                                        name: Path {
                                            root: [],
                                            name: Type {
                                                name: Identifier {
                                                    name: "Int32",
                                                    location: Location(
                                                        26..31,
                                                    ),
                                                },
                                                bound_types: [],
                                                location: Location(
                                                    26..31,
                                                ),
                                            },
                                            location: Location(
                                                26..31,
                                            ),
                                        },
                                    },
                                ),
                                vararg: false,
                                location: Location(
                                    19..31,
                                ),
                            },
                        ],
                        return_type: Some(
                            Named(
                                NamedType {
                                    name: Path {
                                        root: [],
                                        name: Type {
                                            name: Identifier {
                                                name: "Int32",
                                                location: Location(
                                                    36..41,
                                                ),
                                            },
                                            bound_types: [],
                                            location: Location(
                                                36..41,
                                            ),
                                        },
                                        location: Location(
                                            36..41,
                                        ),
                                    },
                                },
                            ),
                        ),
                        location: Location(
                            12..41,
                        ),
                    },
                    block: None,
                    location: Location(
                        12..42,
                    ),
                    documentation: None,
                },
            ],
            location: Location(
                0..44,
            ),
            documentation: None,
        },
    ),
]
