compiler/lume_parser/src/snapshots/lume_parser__tests__trait_snapshots@method_impl.snap
---
source: compiler/lume_parser/src/tests.rs
expression: "parse(Target :: Item,\n\"trait Add {fn add(other: Int32) -> Int32 { return self + other; } }\")"
---
SOURCE_FILE@0..67
  TRAIT@0..67
    TRAIT_KW@0..5 "trait"
    WHITESPACE@5..6 " "
    NAME@6..9
      IDENT@6..9 "Add"
    WHITESPACE@9..10 " "
    LEFT_BRACE@10..11 "{"
    METHOD@11..65
      SIG@11..41
        FN_KW@11..13 "fn"
        WHITESPACE@13..14 " "
        NAME@14..17
          IDENT@14..17 "add"
        PARAM_LIST@17..31
          LEFT_PAREN@17..18 "("
          PARAM@18..30
            NAME@18..23
              IDENT@18..23 "other"
            COLON@23..24 ":"
            WHITESPACE@24..25 " "
            NAMED_TYPE@25..30
              PATH@25..30
                PATH_TYPE@25..30
                  NAME@25..30
                    IDENT@25..30 "Int32"
          RIGHT_PAREN@30..31 ")"
        WHITESPACE@31..32 " "
        RETURN_TYPE@32..41
          ARROW@32..34 "->"
          WHITESPACE@34..35 " "
          NAMED_TYPE@35..41
            PATH@35..41
              PATH_TYPE@35..41
                NAME@35..40
                  IDENT@35..40 "Int32"
                WHITESPACE@40..41 " "
      BLOCK@41..65
        LEFT_BRACE@41..42 "{"
        WHITESPACE@42..43 " "
        RETURN_STMT@43..63
          RETURN_KW@43..49 "return"
          WHITESPACE@49..50 " "
          BIN_EXPR@50..62
            VARIABLE_EXPR@50..54
              NAME@50..54
                IDENT@50..54 "self"
            WHITESPACE@54..55 " "
            ADD@55..56 "+"
            WHITESPACE@56..57 " "
            VARIABLE_EXPR@57..62
              NAME@57..62
                IDENT@57..62 "other"
          SEMICOLON@62..63 ";"
        WHITESPACE@63..64 " "
        RIGHT_BRACE@64..65 "}"
    WHITESPACE@65..66 " "
    RIGHT_BRACE@66..67 "}"
